暂时禁止掉改别名功能

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>hchart demos</title>
+    <title>Demos</title>
     <meta charset=“utf-8”>
     <style>
         .chart{
@@ -27,7 +27,7 @@
         <div class="chart-cnt" id="chart-2"></div>
     </div>
     <script src="./echarts.js"></script>
-    <script src="../dist/hcharts.js"></script>
+    <script src="../dist/echarts-helper.js"></script>
     <script src="./demo.js"></script>
 </body>
 </html>
