Support chart type:bar,line,etc..

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,12 +19,52 @@
         <div class="chart-cnt" id="chart-0"></div>
     </div>
     <div class="chart">
-        <h2 class="title">Empty Tips</h2>
+        <h2 class="title">Loading</h2>
         <div class="chart-cnt" id="chart-1"></div>
     </div>
     <div class="chart">
-        <h2 class="title">Empty Tips</h2>
+        <h2 class="title">bar</h2>
         <div class="chart-cnt" id="chart-2"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">line</h2>
+        <div class="chart-cnt" id="chart-3"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barLine</h2>
+        <div class="chart-cnt" id="chart-4"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barStack</h2>
+        <div class="chart-cnt" id="chart-5"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barSameStack</h2>
+        <div class="chart-cnt" id="chart-6"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barHori</h2>
+        <div class="chart-cnt" id="chart-7"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barHoriStack</h2>
+        <div class="chart-cnt" id="chart-8"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">barHoriSameStack</h2>
+        <div class="chart-cnt" id="chart-9"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">lineArea</h2>
+        <div class="chart-cnt" id="chart-10"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">lineStack</h2>
+        <div class="chart-cnt" id="chart-11"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">lineAreaStack</h2>
+        <div class="chart-cnt" id="chart-12"></div>
     </div>
     <script src="./echarts.js"></script>
     <script src="../dist/echarts-helper.js"></script>
