--- a/demo/index.html
+++ b/demo/index.html
@@ -66,6 +66,26 @@
         <h2 class="title">lineAreaStack</h2>
         <div class="chart-cnt" id="chart-12"></div>
     </div>
+    <div class="chart">
+        <h2 class="title">pie</h2>
+        <div class="chart-cnt" id="chart-13"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">circle</h2>
+        <div class="chart-cnt" id="chart-14"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">pie(nested)</h2>
+        <div class="chart-cnt" id="chart-15"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">radar</h2>
+        <div class="chart-cnt" id="chart-16"></div>
+    </div>
+    <div class="chart">
+        <h2 class="title">radar2</h2>
+        <div class="chart-cnt" id="chart-17"></div>
+    </div>
     <script src="./echarts.js"></script>
     <script src="../dist/echarts-helper.js"></script>
     <script src="./demo.js"></script>
