--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <h2 class="title">radar2</h2>
         <div class="chart-cnt" id="chart-17"></div>
     </div>
-    <script src="./echarts.js"></script>
-    <script src="../dist/echarts-helper.js"></script>
-    <script src="./demo.js"></script>
+    <script src="./demo/echarts.js"></script>
+    <script src="./dist/echarts-helper.js"></script>
+    <script src="./demo/demo.js"></script>
 </body>
 </html>
