change data structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Demos</title>
-    <meta charset=“utf-8”>
+    <meta charset="utf-8">
     <style>
         .chart{
             float:left;
@@ -82,10 +82,7 @@
         <h2 class="title">radar</h2>
         <div class="chart-cnt" id="chart-16"></div>
     </div>
-    <div class="chart">
-        <h2 class="title">radar2</h2>
-        <div class="chart-cnt" id="chart-17"></div>
-    </div>
+
     <script src="./demo/echarts.js"></script>
     <script src="./dist/echarts-helper.js"></script>
     <script src="./demo/demo.js"></script>
