主题不齐作用

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     </div>
 
     <script src="./demo/echarts.js"></script>
+    <script src="./demo/vintage.js"></script>
     <script src="./dist/echarts-helper.js"></script>
     <script src="./demo/demo.js"></script>
 </body>
