--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <script src="./demo/echarts.js"></script>
     <script src="./demo/vintage.js"></script>
+    <script src="./demo/theme-skynet.js"></script>
     <script src="./dist/echarts-helper.js"></script>
     <script src="./demo/demo.js"></script>
 </body>
